# weather_monitoring

./: pyproject.toml
http_requester/: __init__.py
weather/: api_client.py  constants.py  models.py
weather/templates/weather/: alerts.html  base.html  dashboard.html
weather_monitoring/: settings.py  urls.py
